--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es6",
     "module": "commonjs",
-    "outDir": "./js/",
+    "outDir": "../es6/",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "sourceMap": true,
-    "declaration": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "removeComments": true,
-    "forceConsistentCasingInFileNames": true
+    "noEmitHelpers": true,
+    "moduleResolution": "node"
   },
-  "files": [
-    "typings/globals/node/index.d.ts"
-  ],
   "exclude": [
     "js",
-    "node_modules"
+    "."
   ]
 }
