--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "precompile": "npm run clean",
     "compile": "tsc",
     "babel": "babel es6 --out-dir es5",
-    "test": "mocha test",
-    "clean": "del-cli es6/",
-    "lint":"dir"
+    "test": "env NODE_ENV=test mocha -R spec js/tests",
+    "clean": "del-cli js/",
+    "lint": "tslint 'ts/**/*.ts?(x)' || exit 1"
   },
   "author": {
     "name": "Pauli Kostamo",
@@ -27,7 +27,8 @@
   "license": "MIT",
   "dependencies": {
     "core-js": "^0.6.0",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "request": "^2.74.0"
   },
   "engines": {
     "node": ">=4.5.0"
@@ -44,10 +45,5 @@
     "tslint-microsoft-contrib": "^2.0.8",
     "typescript": "^1.8.10",
     "typings": "^1.3.1"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run lint"
-    }
   }
 }
