--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "core-js": "^0.6.0",
+    "moment": "^2.15.0",
     "node-uuid": "^1.4.7",
     "request": "^2.74.0",
     "request-promise": "^4.1.1"
