--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "core-js": "^0.6.0",
+    "lodash": "^4.15.0",
     "moment": "^2.15.0",
     "node-uuid": "^1.4.7",
     "request": "^2.74.0",
@@ -48,6 +49,8 @@
     "tslint": "^3.12.1",
     "tslint-microsoft-contrib": "^2.0.8",
     "typescript": "^1.8.10",
-    "typings": "^1.3.1"
+    "typings": "^1.3.1",
+    "urijs": "^1.18.1",
+    "zombie": "^4.2.1"
   }
 }
