Add license, Keep comments with build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "removeComments": true,
+    "removeComments": false,
     "forceConsistentCasingInFileNames": true
   },
   "exclude": [
