--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "paymenthighway-javascript-lib",
   "version": "0.0.1",
   "description": "Paymenthighway SDK",
-  "main": "js/paymentAPI.js",
-  "typings": "js/paymentAPI.d.ts",
+  "main": "js/index.js",
+  "typings": "js/index.d.ts",
   "babel": {
     "presets": [
       "es2015"
