--- a/package.json
+++ b/package.json
@@ -57,5 +57,10 @@
     "typings": "^1.3.1",
     "urijs": "^1.18.1",
     "zombie": "^4.2.1"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run lint && npm run preversion"
+    }
   }
 }
