--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "moment": "^2.15.0",
     "node-uuid": "^1.4.7",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "typings": "^1.3.1"
   },
   "engines": {
     "node": ">=4.5.0"
@@ -54,7 +55,6 @@
     "tslint": "^3.12.1",
     "tslint-microsoft-contrib": "^2.0.8",
     "typescript": "^1.8.10",
-    "typings": "^1.3.1",
     "urijs": "^1.18.1",
     "zombie": "^4.2.1"
   },
