--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "email": "pauli.kostamo@solinor.com",
     "url": "http://paymenthighway.fi/"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/solinor/paymenthighway-javascript-lib"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/solinor/paymenthighway-javascript-lib"
   },
   "license": "MIT",
   "dependencies": {
     "core-js": "^0.6.0",
     "lodash": "^4.15.0",
     "moment": "^2.15.0",
-    "node-uuid": "^1.4.7",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
-    "typings": "^1.3.1"
+    "typings": "^1.3.1",
+    "uuid": "^3.0.0"
   },
   "engines": {
     "node": ">=4.3.2"
