--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "core-js": "^0.6.0",
     "lodash": "^4.15.0",
-    "moment": "^2.15.0",
+    "moment": "2.16.0",
     "node-uuid": "^1.4.7",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
