--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     ]
   },
   "scripts": {
-    "postinstall": "typings install",
     "preversion": "npm run compile && npm test",
     "precompile": "npm run clean",
     "compile": "tsc",
@@ -32,13 +31,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "core-js": "^0.6.0",
+    "@types/chai": "^3.4.34",
+    "@types/chai-string": "^1.1.30",
+    "@types/lodash": "^4.14.43",
+    "@types/mocha": "^2.2.33",
+    "@types/node": "^6.0.52",
+    "@types/request": "0.0.36",
+    "@types/request-promise": "^4.1.33",
+    "@types/urijs": "^1.15.31",
+    "@types/uuid": "^2.0.29",
     "lodash": "^4.15.0",
-    "moment": "2.16.0",
-    "node-uuid": "^1.4.7",
+    "moment": "^2.17.0",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
-    "typings": "^1.3.1"
+    "uuid": "^3.0.1"
   },
   "engines": {
     "node": ">=4.3.2"
@@ -47,16 +53,16 @@
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
-    "chai-string": "^1.2.0",
+    "chai-string": "^1.3.0",
     "del-cli": "^0.2.0",
     "ghooks": "^1.2.4",
     "istanbul": "^0.4.5",
-    "mocha": "^2.5.3",
-    "tslint": "^3.12.1",
-    "tslint-microsoft-contrib": "^2.0.8",
-    "typescript": "^1.8.10",
+    "mocha": "^3.2.0",
+    "tslint": "^4.1.1",
+    "tslint-microsoft-contrib": "^4.0.0",
+    "typescript": "^2.1.4",
     "urijs": "^1.18.1",
-    "zombie": "^4.2.1"
+    "zombie": "^5.0.0"
   },
   "config": {
     "ghooks": {
