--- a/package.json
+++ b/package.json
@@ -4,21 +4,15 @@
   "description": "Paymenthighway SDK",
   "homepage": "https://www.paymenthighway.fi/dev/",
   "main": "js/index.js",
-  "typings": "js/index.d.ts",
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
   "scripts": {
     "preversion": "npm run compile && npm test",
     "precompile": "npm run clean",
     "compile": "tsc",
-    "babel": "babel js --out-dir es5",
     "test": "set NODE_ENV=test && mocha -t 6000 -R spec js/tests",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -t 6000 -R spec js/tests",
     "clean": "del-cli js/",
-    "lint": "tslint ts/**/*.ts"
+    "lint": "tslint ts/**/*.ts",
+    "pre-commit": "npm run lint"
   },
   "author": {
     "name": "Pauli Kostamo",
@@ -50,12 +44,10 @@
     "node": ">=4.3.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "chai-string": "^1.3.0",
     "del-cli": "^0.2.0",
-    "ghooks": "^1.2.4",
+    "husky": "^0.13.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "tslint": "^4.1.1",
@@ -63,10 +55,5 @@
     "typescript": "^2.1.4",
     "urijs": "^1.18.1",
     "zombie": "^5.0.0"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run lint"
-    }
   }
 }
