--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "author": {
     "name": "Pauli Kostamo",
-    "email": "pauli.kostamo@solinor.com",
+    "email": "pauli.kostamo@paymenthighway.fi",
     "url": "http://paymenthighway.fi/"
   },
   "repository": {
