MobilePay app payment flow support.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preversion": "npm run compile && npm test",
     "precompile": "npm run clean",
     "compile": "tsc",
-    "test": "set NODE_ENV=test && mocha -t 6000 -R spec js/tests",
+    "test": "set NODE_ENV=test && mocha -t 6000 -R spec js/tests --grep @external --invert",
+    "test-all": "set NODE_ENV=test && mocha -t 6000 -R spec js/tests",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -t 6000 -R spec js/tests",
     "clean": "del-cli js/",
     "lint": "tslint ts/**/*.ts",
