--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "main": "./js/index.js",
   "types": "./js/index.d.ts",
   "scripts": {
-    "preversion": "npm run compile && npm test",
+    "preversion": "npm run generate-barrels && npm run compile && npm test",
     "precompile": "npm run clean",
     "compile": "tsc",
     "test": "set NODE_ENV=test && mocha -t 6000 -R spec js/tests --grep @external --invert",
     "test-all": "set NODE_ENV=test && mocha -t 6000 -R spec js/tests",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -t 6000 -R spec js/tests",
-    "clean": "del-cli js/",
+    "clean": "rm -rf js/",
     "lint": "tslint ts/**/*.ts",
-    "pre-commit": "npm run lint"
+    "pre-commit": "npm run lint",
+    "generate-barrels": "barrelsby --delete -d ts -q -e response/* -e tests/* -e util/*"
   },
   "author": {
     "name": "Pauli Kostamo",
@@ -46,16 +47,16 @@
     "@types/chai": "^3.4.34",
     "@types/chai-string": "^1.1.30",
     "@types/mocha": "^2.2.33",
+    "barrelsby": "0.0.8",
     "chai": "^3.5.0",
     "chai-string": "^1.3.0",
-    "del-cli": "^0.2.0",
     "husky": "^0.13.1",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "mocha": "^5.1.1",
     "tslint": "^4.1.1",
     "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1.4",
     "urijs": "^1.18.1",
-    "zombie": "^5.0.0"
+    "zombie": "^5.0.8"
   }
 }
