--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/chai": "^3.4.34",
     "@types/chai-string": "^1.1.30",
     "@types/mocha": "^2.2.33",
+    "@types/puppeteer": "^1.3.2",
     "barrelsby": "0.0.8",
     "chai": "^3.5.0",
     "chai-string": "^1.3.0",
@@ -56,7 +57,7 @@
     "tslint": "^4.1.1",
     "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1.4",
-    "urijs": "^1.18.1",
-    "zombie": "^5.0.8"
+    "puppeteer": "^1.4.0",
+    "urijs": "^1.18.1"
   }
 }
