--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compile": "tsc",
     "test": "set NODE_ENV=test && mocha -t 20000 -R spec js/tests --grep @external --invert",
     "test-all": "set NODE_ENV=test && mocha -t 20000 -R spec js/tests",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -t 20000 -R spec js/tests",
+    "coverage": "nyc mocha -t 20000 -R spec js/tests",
     "clean": "rm -rf js/",
     "lint": "tslint ts/**/*.ts",
     "pre-commit": "npm run lint",
@@ -28,36 +28,36 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/lodash": "^4.14.109",
-    "@types/node": "^6.0.111",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "^6.14.4",
     "@types/request": "2.47.0",
-    "@types/request-promise": "^4.1.33",
+    "@types/request-promise": "^4.1.42",
     "@types/urijs": "^1.15.31",
-    "@types/uuid": "^3.4.3",
-    "lodash": "^4.15.0",
-    "moment": "^2.21.0",
-    "request": "^2.87.0",
-    "request-promise": "^4.1.1",
-    "uuid": "^3.0.1"
+    "@types/uuid": "^3.4.4",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "uuid": "^3.3.2"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.1.7",
     "@types/chai-string": "^1.1.30",
-    "@types/mocha": "^5.2.0",
-    "@types/puppeteer": "^1.6.4",
+    "@types/mocha": "^5.2.6",
+    "@types/puppeteer": "^1.12.3",
     "barrelsby": "0.0.8",
-    "chai": "^4.1.2",
-    "chai-string": "^1.3.0",
+    "chai": "^4.2.0",
+    "chai-string": "^1.5.0",
     "husky": "^0.14.3",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
-    "puppeteer": "^1.6.2",
-    "tslint": "^5.10.0",
-    "tslint-microsoft-contrib": "^5.0.3",
-    "typescript": "^2.1.4",
+    "nyc": "^13.3.0",
+    "puppeteer": "^1.13.0",
+    "tslint": "^5.14.0",
+    "tslint-microsoft-contrib": "^5.2.1",
+    "typescript": "^2.9.2",
     "urijs": "^1.18.1"
   }
 }
